--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,13 @@
+html {
+  font-size: 14px;
+}
+
+h1 {
+  font-size: 2em;
+}
+ h2, h3, h4, h5 {
+   font-size: 1.4em;
+ }
 
 .width-box {
   width: 95%;
