--- a/css/style.css
+++ b/css/style.css
@@ -112,3 +112,37 @@ header {
   color: white;
   font-size: 25px;
 }
+
+#footer_top {
+  height: 300px;
+  background-color: #2C3E50;
+  color: white;
+  vertical-align: middle;
+}
+
+.fab {
+  width: 47px;
+  height: 47px;
+  font-size: 25px;
+  padding: 10px;
+  border: 1px solid white;
+  border-radius: 50%;
+  margin-left: 5px;
+}
+
+#footer_top p > span {
+  color: #1ABC9C;
+}
+
+.footer_mg_tp {
+  margin-top: 20%;
+}
+
+#footer_bottom {
+  height: 80px;
+  background-color: #1A252F;
+  color: white;
+}
+#footer_bottom span {
+  line-height: 80px;
+}
