--- a/css/style.css
+++ b/css/style.css
@@ -86,7 +86,7 @@ header {
 }
 
 #main_mid {
-  height: 400px;
+  /* height: 400px; */
   background-color: #1ABC9C;
   color: white;
 }
@@ -95,6 +95,14 @@ header {
   width: 60%;
   margin: auto;
 }
+
+@media screen and (max-width: 762px) {
+
+  textarea {
+    width: 200px;
+  }
+}
+
 
 .btn_green {
   background-color: #1ABC9C;
@@ -114,7 +122,7 @@ header {
 }
 
 #footer_top {
-  height: 300px;
+  /* height: 300px; */
   background-color: #2C3E50;
   color: white;
   vertical-align: middle;
@@ -134,9 +142,9 @@ header {
   color: #1ABC9C;
 }
 
-.footer_mg_tp {
+/* .footer_mg_tp {
   margin-top: 20%;
-}
+} */
 
 #footer_bottom {
   height: 80px;
