--- a/css/style.css
+++ b/css/style.css
@@ -77,6 +77,7 @@ header {
 }
 #main_top {
   color: #2C3E50;
+  padding: 80px 0;
 }
 .blue_line {
   background-color: #2C3E50;
@@ -89,6 +90,11 @@ header {
   /* height: 400px; */
   background-color: #1ABC9C;
   color: white;
+  padding: 80px 0;
+}
+
+#main_bottom {
+  padding: 80px 0;
 }
 
 .wrapper_60 {
@@ -119,13 +125,14 @@ header {
   background-color: #1ABC9C;
   color: white;
   font-size: 25px;
+  margin-bottom: 50px;
 }
 
 #footer_top {
   /* height: 300px; */
   background-color: #2C3E50;
   color: white;
-  vertical-align: middle;
+  padding-bottom: 100px;
 }
 
 .fab {
